[package]
name = "peck"
version = "0.1.0"
authors = ["Paul Collier <paul@paulcollier.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
tui = { version = "0.18", default-features = false, features = ['crossterm'] }
tree-sitter = "0.20"
ropey = "1.5"
better-panic = "0.3"
crossbeam-channel = "0.5"
log = "0.4"

[build-dependencies]
cc = "*"
